dapp: fix usd zasset value alignment
Without this patch, we have alignment issue
when we have substancial usd value in zassets
page in Private Zassets column.

This is a problem because the USD term must
stand in same line all the time.

This patch solves the problem by fixing the
cell width.

Issue-URL: https://app.clickup.com/t/3762r98

--- a/dapp/src/components/ZAssets/Balance/styles.scss
+++ b/dapp/src/components/ZAssets/Balance/styles.scss
@@ -5,7 +5,7 @@
     flex-direction: column;
     align-items: start;
     justify-content: center;
-    width: 100px;
+    width: 147px;
 
     .balance {
         color: $highlighted-text;
